--- a/index.html
+++ b/index.html
@@ -84,7 +84,22 @@
                     <p class="tag3"> 3D</p>
                 </div>
             </div>
-            <!-- <div class="projects-col">
+            <div class="projects-col">
+                <div class="project-description">
+                    <div class="text">
+
+                        Game Jam Project
+                    </div>
+
+                </div>
+                <a href="WitchRider.html"><img src="images/Untitled Fisher Game.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> C# </p>
+                    <p class="tag2"> Unity</p>
+                    <p class="tag3"> 2D</p>
+                </div>
+            </div>
+            <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
                     </div>
@@ -96,7 +111,7 @@
                     <p class="tag2"> GoogleSheets</p>
                     <p class="tag3"> 2D</p>
                 </div>
-            </div> -->
+            </div>
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
