--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
 
                 </div>
-                <a href="WitchRider.html"><img src="images/Untitled Fisher Game.png" style="width:100%" class="image"></a>
+                <a href="WitchRider.html"><img src="images/WitchRiders.png" style="width:100%" class="image"></a>
                 <div class="tags">
                     <p class="tag1"> C# </p>
                     <p class="tag2"> Unity</p>
