--- a/WitchRider.html
+++ b/WitchRider.html
@@ -33,7 +33,7 @@
     <section class="projects">
 
         <div class="project-title">
-            <h1 id="project-title"> Witch Rider (2023)</h1>
+            <h1 id="project-title"> Witch Riders (2023)</h1>
             <div class="interactive">
                 <a href="https://weisa.itch.io/witch-riders" target="_blank" rel="noopener noreferrer" class="btn_2">
                     Play Now</a>
@@ -64,10 +64,11 @@
             </div>
             <div class="game-info">
                 <div class="description">
-                    <b>Witch Skater</b> is a multiplayer game and the goal is to use the fans to propel yourself or blow
+                    <b>Witch Riders</b> is a multiplayer game and the goal is to use the fans to propel yourself or blow
                     others into traps or off the map with a big fan.<br>
                     The prompt of this game is to design a game around two
-                    verbs: <b>Skate</b> and <b>Blow</b> . We went through a variety of pitches before settling on making a PVP
+                    verbs: <b>Skate</b> and <b>Blow</b> . We went through a variety of pitches before settling on making
+                    a PVP
                     platformer arena game with players on skateboards and giant fans. The physics and movement of the
                     game simulate a skateboard, with no friction and being carried by your momentum, and the blow aspect
                     was incorporated through the large fans the players carried.
@@ -80,70 +81,59 @@
                     <li>Local Multiplayer <i class="fa fa-caret-down" onclick="hideBlock('multi')"
                             style="cursor:pointer"></i> </li>
                     <div id="multi" style="display: none;">
-                        In Dracomaton, items play a crucial role by introducing both positive and negative effects on
-                        players that significantly impact gameplay. <br>
-                        <img src="images/dc11.gif">
-                        <img src="images/ItemOverview.png"><br>
-                        My responsibilities involved establishing the foundation for the item system. This encompassed
-                        creating a framework for generating new items, adding distinctive effects to each item, and
-                        implementing the mechanics for applying these effects to the player. To achieve this, I used
-                        Unity's ScriptableObjects to devise a base class, BaseItem, which serves as the base prefabs for
-                        all future items. Each base item owns unique attributes such as id, icon, and employs Item Stats
-                        Mods & Item Status Mods to manage its distinctive effects. When the Apply function in the base
-                        item script gets called, it will add all the mods(aka. effects) to its host damage
-                        source/damageable, mostly player.
+                        In a PVP arena game, local multiplayer is very important as part of the core gameplay.
+                        Therefore, I have used Unity's <b>new input system</b> to facilitate gameplay for up to four
+                        players,
+                        each using distinct controllers. First, I created an Input Action Asset which organized all
+                        relevant in-game actions into a group of action maps, distinguishing between UI and Player
+                        controls.
                         <br>
-                        <img src="images/ItemCode.png"><br>
-                        Considering that designers will collaborate on items throughout the development, I designed a
-                        user-friendly system that allows designers to swiftly test and tweak item attributes during
-                        tests by adjusting parameters directly in the Inspector.<br>
-                        <img src="images/ItemInspector.png"><br>
+                        <img src="images/UIActions_WR.png">
+                        <img src="images/PlayerActions_WR.png"><br>
+                        Next, I used the PlayerInput component within Unity’s new Input System to manage input across
+                        multiple players, customizing actions based on each player's input devices and unique action
+                        maps, for example, the controller player needs to press South Button to jump, but the keyboard
+                        needs to press Space. <br>
+                        <img src="images/playerInput.png"><br>
+
+                        However, the normal event system doesn’t support handling multiple UI
+                        input. To address this, I used an additional component called the "Input System UI Input
+                        Module," enabling the integration of the Input System with the UI system. This ensures players
+                        can seamlessly interact with UI elements, such as buttons and sliders on menu scenes or other UI
+                        scenes. For example, controller players can also navigate through buttons.
+                        <br>
+                        <img src="images/eventSystem.png"><br>
                     </div>
-                    <li> UI Programming <i class="fa fa-caret-down" onclick="hideBlock('ui')" style="cursor:pointer"></i>
+                    <li> UI Programming <i class="fa fa-caret-down" onclick="hideBlock('ui')"
+                            style="cursor:pointer"></i>
                     </li>
                     <div id="ui" style="display: none;">
 
-                        In Dracomaton, random objects need to be spawned on the map under different situations, for
-                        example, shop items are randomly selected from all the items in the game. To address the random
-                        spawning of objects, including shop items. This system organizes all game resources, such as UI
-                        icons, Damage Text, and VFX, into a unified structure.<br>
-                        <h2> Resources Manager</h2>
-                        The Resource Manager, implemented as a singleton class, efficiently fetches resource objects and
-                        categorizes them based on type when awake.<br>
-                        <img src="images/ResourcesManager.png"> <img src="images/fetchItem.png"> <img
-                            src="images/rmscript.png"><br>
-                        For code clarity, I used partial class to separate the code into different files. Individual
-                        resource managers also make generating a random object more easily by just calling the function
-                        in the corresponding manager script, and programmers can create many single manager scripts
-                        without complicated primary resources manager script.<br>
+                        I am responsible for all the UI implementation in this game, including the Main Menu, Pause
+                        Menu, Player Selection Screen, Level Selection Screen, and more. In the Player Selection Screen,
+                        the player's sprite starts in a default dark hue and dynamically shifts to distinct colors as
+                        each player joins.<br>
+                        <!-- add image -->
+                        The select player manager has a list of player slot ui references, and the activate function
+                        will be called every time a player joins.<br>
+                        <img src="images/SelectSceneManager.png">
+                        <img src="images/playerSlotUI.png">
+                        <img src="images/SelectPlayerController.png"><br>
 
-                        <img src="images/returnItems.png"><br>
-
-                        <h2> Reward System</h2>
-                        In Dracomaton, players receive varied rewards based on the type of room they complete,
-                        for example, clearing a health room will reward the player a health portion. <br>
-                        <img src="images/dc8.gif"> <img src="images/dc10.gif"><br>
-                        The Reward Spawner selects the reward type based on the current room's type from reading the
-                        current room controller, and the Reward Script ensures appropriate spawning within reachable
-                        areas (e.g. avoid water area) near the player.
+                        Once all desired players have joined, they can press the "Next" button to navigate to the level
+                        selection screen, where they can choose from three different levels before starting the game.
+                        The Select Level Controller works similarly to the Player Select Controller but will call the
+                        Multiplayer Manager to instantiate the selected Level Prefab. Players can return to the previous
+                        player selection screen if they want to adjust the number of players.<br>
+                        <!-- add image -->
+                        Throughout gameplay, players can access the pause menu at any time, providing various choices:
+                        "Restart" directs them to the main menu, "Resume" lifts the pause, and "Tutorial" displays a
+                        panel offering control instructions. If only one player remains alive in the game, the game
+                        concludes with an ending scene. Players then have the option to restart the game or quit the
+                        game.
                         <br>
+                        <img src="images/UIManager.png"><br>
 
-                        <img src="images/rewardSpawners.png"> <img src="images/spawnRewards.png"><br>
-
-
-                        <h2> Shop System</h2>
-                        As for the Shop System, I was responsible for offering three shop items (mostly the same object
-                        as rewards) in the Shop room to players. One item is always a Health portion for game balance,
-                        and the other is a random type of object (items, forms, etc). <br>
-                        <img src="images/dc9.gif"><br>
-                        A prefab with preset spawning methods facilitates the placement of shop items on the screen,
-                        which can be easily placed in any position on the map. Shop Room Manager populates three shop
-                        item positions, and the attached Shop Item Spawning Script manages object spawning on these
-                        positions. The variable "Item Type" in the spawning script decides the type of spawned objects,
-                        for instance, if item type is Random, it means this position will spawn a random object,
-                        otherwise, it will only spawn the selected type of item.<br>
-
-                        <img src="images/shopItem.png"> <img src="images/shopItem1.png"> <br>
 
                     </div>
                 </div>
