--- a/index.html
+++ b/index.html
@@ -84,7 +84,23 @@
                     <p class="tag3"> 3D</p>
                 </div>
             </div>
+
             <div class="projects-col">
+                <div class="project-description">
+                    <div class="text">
+                        Graduate school class project
+                    </div>
+
+                </div>
+                <a href="DeckFective.html"><img src="images/DeckFective.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> C# </p>
+                    <p class="tag2"> Unity</p>
+                    <p class="tag3"> 2D</p>
+                </div>
+            </div>
+
+            <!-- <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
 
@@ -97,7 +113,7 @@
                     <p class="tag2"> Unity</p>
                     <p class="tag3"> 2D</p>
                 </div>
-            </div>
+            </div> -->
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
@@ -173,7 +189,7 @@
             </div> -->
 
 
-            <div class="projects-col">
+            <!-- <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
                         <b>Where is my body</b> is a 2D Endless runner game that the character is a ghost trying to find
@@ -187,9 +203,9 @@
                     <p class="tag2"> Phaser3</p>
                     <p class="tag3"> 2D</p>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="projects-col">
+            <!-- <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
                         <b>DreamChaser</b> is a puzzle platformer in which a character would have to go through several
@@ -202,7 +218,7 @@
                     <p class="tag2"> Phaser3</p>
                     <p class="tag3"> 2D</p>
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
@@ -246,7 +262,7 @@
                     <p class="tag3"> 2D</p>
                 </div>
             </div>
-
+<!-- 
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
@@ -259,9 +275,9 @@
                     <p class="tag2"> Phaser3</p>
                     <p class="tag3"> 2D</p>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="projects-col">
+            <!-- <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
                         <b>Killer Whale</b> is an interactive novels that telling a story about a girl who has been
@@ -272,7 +288,7 @@
                 <div class="tags">
                     <p class="tag2"> Twine</p>
                     <p class="tag3"> 2D</p>
-                </div>
+                </div> -->
 
 
             </div>
