--- a/works.html
+++ b/works.html
@@ -64,7 +64,7 @@
                     Slides</a></p>
         </div>
 
-        <div class="work-description">
+        <!-- <div class="work-description">
             <h1><a id="turtle"></a>Turtles All The Way Down
                 <a href="https://niccoloabate.itch.io/turtles-all-the-way-down" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick="location.href = 'https://github.com/NikThomas9/CMPM170-Jam-2'"
@@ -95,9 +95,9 @@
             <p><a
                     href="https://docs.google.com/document/d/1Kfp4RMN9OmJQuDPga68RMkNMyxkN6juhE3Si8fvFOXc/edit?usp=sharing">Design
                     Docs</a></p>
-        </div>
+        </div> -->
 
-        <div class="work-description">
+        <!-- <div class="work-description">
             <h1><a id="school"></a>School Spirits
                 <a href="https://yiyang-lu.itch.io/school-spirits" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick="location.href = 'https://github.com/lyiyang0702/CMPM170-Jam-3'"
@@ -126,7 +126,7 @@
             <p><a
                     href="https://docs.google.com/presentation/d/1aFXTbVPru89xRWc-QxUwvD5FHAu-ez0AGzBvx6SL4eg/edit?usp=sharing">Design
                     Slides</a></p>
-        </div>
+        </div> -->
 
         <div class="work-description">
             <h1><a id="dice"></a>Dodgy Dice
@@ -157,7 +157,7 @@
             </ul>
         </div>
 
-        <div class="work-description">
+        <!-- <div class="work-description">
             <h1><a id="body"></a>Where is My Body?
                 <a href="https://yiyang-lu.itch.io/where-is-my-body" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick="location.href = 'https://github.com/lyiyang0702/WhereIsMyBody'"
@@ -208,7 +208,7 @@
                     <img src="images/dcsc3.png">
                 </div>
             </ul>
-        </div>
+        </div> -->
 
         <div class="work-description">
             <h1><a id="shoot"></a>Ace Attorney Shooting
@@ -238,7 +238,7 @@
                 </div>
             </ul>
         </div>
-        <div class="work-description">
+        <!-- <div class="work-description">
             <h1><a id="whale"></a>Killer Whale
                 <a href="https://yiyang-lu.itch.io/twine-game-killer-whale" class="btn_2"> Play Now</a>
             </h1>
@@ -259,7 +259,7 @@
                     <img src="images/kw3.png">
                 </div>
             </ul>
-        </div>
+        </div> -->
         <h4>Designs</h4>
         <div class="work-description">
             <h1><a id="poster"></a>Ace Attorney Interactive Poster
